# Chocolate-Factory

./: README.md  build.sh  chocolateFactory.cabal
app/: Main.hs
src/: Factory1.hs  Factory2.hs  Factory3.hs
